--- a/packages/docs/src/app/components/anchors/_anchors-theme.scss
+++ b/packages/docs/src/app/components/anchors/_anchors-theme.scss
@@ -39,9 +39,14 @@
             }
         }
 
-        &:hover { @include box-shadow( inset 3px 0 0 rgba($shadow, 0.2) ); }
+        &:hover {
+            @include box-shadow( inset 3px 0 0 rgba($shadow, 0.2) );
+        }
 
-        &_active, &_active:hover { @include box-shadow( inset 3px 0 0 $primary_500 ); }
+        &_active,
+        &_active:hover {
+            @include box-shadow( inset 3px 0 0 $primary_500 );
+        }
     }
 }
 
