--- a/packages/docs/src/app/shared/example-viewer/_example-viewer-theme.scss
+++ b/packages/docs/src/app/shared/example-viewer/_example-viewer-theme.scss
@@ -5,7 +5,7 @@
     $is-dark: map-get($theme, is-dark);
 
     $link: map-get(map-get($theme, components), link);
-    $color_hover: map-get(map-get($link, hover), border);
+    $color_hover: map-get($link, state-hover-text);
 
     $error: map-get($theme, error);
     $error-border: mc-color($error, 200);
@@ -31,7 +31,7 @@
     }
 
     .docs-example-viewer__example {
-        border: 1px solid fade_out($example-border, 0.3);
+        border: 1px solid $example-border;
     }
 }
 
