--- a/packages/mosaic/core/theming/_theming.scss
+++ b/packages/mosaic/core/theming/_theming.scss
@@ -30,7 +30,15 @@
     @return rgba($color, $opacity);
 }
 
-@function mc-light-theme($primary, $second, $error, $info, $success, $warning) {
+@function mc-light-theme() {
+    $primary: mc-palette($light-color-scheme-primary-palette, $light-color-scheme-primary-default);
+    $second: mc-palette($light-color-scheme-second-palette, $light-color-scheme-second-default);
+    $error: mc-palette($light-color-scheme-error-palette, $light-color-scheme-error-default);
+
+    $info: mc-palette($light-color-scheme-info-palette, $light-color-scheme-info-default);
+    $success: mc-palette($light-color-scheme-success-palette, $light-color-scheme-success-default);
+    $warning: mc-palette($light-color-scheme-warning-palette, $light-color-scheme-warning-default);
+
     $states: (
         focused-color: $light-color-scheme-states-focused-color,
         selected-color: $light-color-scheme-states-selected-color,
@@ -75,7 +83,15 @@
     @return map_merge($theme, (components: mc-light-theme-components($theme)));
 }
 
-@function mc-dark-theme($primary, $second, $error, $info, $success, $warning) {
+@function mc-dark-theme() {
+    $primary: mc-palette($dark-color-scheme-primary-palette, $dark-color-scheme-primary-default);
+    $second: mc-palette($dark-color-scheme-second-palette, $dark-color-scheme-second-default);
+    $error: mc-palette($dark-color-scheme-error-palette, $dark-color-scheme-error-default);
+
+    $info: mc-palette($dark-color-scheme-info-palette, $dark-color-scheme-info-default);
+    $success: mc-palette($dark-color-scheme-success-palette, $dark-color-scheme-success-default);
+    $warning: mc-palette($dark-color-scheme-warning-palette, $dark-color-scheme-warning-default);
+
     $states: (
         focused-color: $dark-color-scheme-states-focused-color,
         selected-color: $dark-color-scheme-states-focused-color,
