--- a/packages/mosaic/design-tokens/_variables.scss
+++ b/packages/mosaic/design-tokens/_variables.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Thu, 28 Jan 2021 08:05:40 GMT
+// Generated on Tue, 02 Feb 2021 12:59:30 GMT
 
 $light-color-scheme-primary-default: #338FCC;
 $light-color-scheme-second-default: #B3B3B3;
@@ -172,96 +172,6 @@ $palette-yellow-contrast-600: white;
 $palette-yellow-contrast-700: white;
 $palette-yellow-contrast-800: white;
 $palette-yellow-contrast-a-100: #4D4D4D;
-$typography-display-1-font-size: 56px;
-$typography-display-1-line-height: 76px;
-$typography-display-1-letter-spacing: -0.4px;
-$typography-display-1-font-weight: normal;
-$typography-display-1-font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
-$typography-display-1-text-transform: null;
-$typography-display-2-font-size: 45px;
-$typography-display-2-line-height: 56px;
-$typography-display-2-letter-spacing: normal;
-$typography-display-2-font-weight: normal;
-$typography-display-2-font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
-$typography-display-2-text-transform: null;
-$typography-display-3-font-size: 34px;
-$typography-display-3-line-height: 44px;
-$typography-display-3-letter-spacing: 0.25px;
-$typography-display-3-font-weight: normal;
-$typography-display-3-font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
-$typography-display-3-text-transform: null;
-$typography-headline-font-size: 24px;
-$typography-headline-line-height: 32px;
-$typography-headline-letter-spacing: normal;
-$typography-headline-font-weight: normal;
-$typography-headline-font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
-$typography-headline-text-transform: null;
-$typography-title-font-size: 20px;
-$typography-title-line-height: 28px;
-$typography-title-letter-spacing: 0.15px;
-$typography-title-font-weight: 500;
-$typography-title-font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
-$typography-title-text-transform: null;
-$typography-subheading-font-size: 15px;
-$typography-subheading-line-height: 20px;
-$typography-subheading-letter-spacing: 0.15px;
-$typography-subheading-font-weight: 700;
-$typography-subheading-font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
-$typography-subheading-text-transform: null;
-$typography-body-font-size: 15px;
-$typography-body-line-height: 20px;
-$typography-body-letter-spacing: 0.15px;
-$typography-body-font-weight: normal;
-$typography-body-font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
-$typography-body-text-transform: null;
-$typography-body-strong-font-size: 15px;
-$typography-body-strong-line-height: 20px;
-$typography-body-strong-letter-spacing: 0.15px;
-$typography-body-strong-font-weight: 500;
-$typography-body-strong-font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
-$typography-body-strong-text-transform: null;
-$typography-body-caps-font-size: 15px;
-$typography-body-caps-line-height: 20px;
-$typography-body-caps-letter-spacing: 1.7px;
-$typography-body-caps-font-weight: normal;
-$typography-body-caps-font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
-$typography-body-caps-text-transform: uppercase;
-$typography-body-mono-font-size: 15px;
-$typography-body-mono-line-height: 20px;
-$typography-body-mono-letter-spacing: normal;
-$typography-body-mono-font-weight: normal;
-$typography-body-mono-font-family: 'Roboto Mono', 'Consolas', 'Menlo', 'Monaco', monospace;
-$typography-body-mono-text-transform: null;
-$typography-caption-font-size: 13px;
-$typography-caption-line-height: 16px;
-$typography-caption-letter-spacing: 0.25px;
-$typography-caption-font-weight: normal;
-$typography-caption-font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
-$typography-caption-text-transform: null;
-$typography-caption-caps-font-size: 13px;
-$typography-caption-caps-line-height: 16px;
-$typography-caption-caps-letter-spacing: 1.5px;
-$typography-caption-caps-font-weight: normal;
-$typography-caption-caps-font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
-$typography-caption-caps-text-transform: uppercase;
-$typography-caption-mono-font-size: 13px;
-$typography-caption-mono-line-height: 16px;
-$typography-caption-mono-letter-spacing: normal;
-$typography-caption-mono-font-weight: normal;
-$typography-caption-mono-font-family: 'Roboto Mono', 'Consolas', 'Menlo', 'Monaco', monospace;
-$typography-caption-mono-text-transform: null;
-$typography-small-text-font-size: 13px;
-$typography-small-text-line-height: 16px;
-$typography-small-text-letter-spacing: 0.25px;
-$typography-small-text-font-weight: normal;
-$typography-small-text-font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
-$typography-small-text-text-transform: null;
-$typography-extra-small-text-font-size: 11px;
-$typography-extra-small-text-line-height: 16px;
-$typography-extra-small-text-letter-spacing: 0.22px;
-$typography-extra-small-text-font-weight: normal;
-$typography-extra-small-text-font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
-$typography-extra-small-text-text-transform: null;
 $alert-light-color-scheme-error-background: #FCEFEC;
 $alert-light-color-scheme-error-border: #E76E5C;
 $alert-light-color-scheme-error-icon: #E76E5C;
@@ -297,6 +207,10 @@ $alert-size-padding-small: 11px 15px;
 $alert-size-right-padding-dismissible: 15px;
 $alert-size-border-width: 1px;
 $alert-size-border-radius: 4px;
+$alert-font-default-header: subheading;
+$alert-font-default-body: body;
+$alert-font-small-header: caption;
+$alert-font-small-body: caption;
 $autocomplete-size-panel-padding: 4px 0;
 $autocomplete-size-panel-max-height: 256px;
 $autocomplete-size-panel-border-radius: 3px;
@@ -304,6 +218,8 @@ $badge-size-min-width: 10px;
 $badge-size-padding: 4px 8px;
 $badge-size-border-width: 1px;
 $badge-size-border-radius: 4px;
+$badge-font-default: body;
+$badge-font-caps: caption;
 $button-toggle-size-border-size: 1px;
 $button-toggle-size-border-radius: 3px;
 $button-light-color-scheme-active-shadow: inset 0 1px 2px 0 rgba(black, 0.2);
@@ -347,6 +263,8 @@ $button-dark-color-scheme-error-states-active-background: darken(#666666, 5);
 $button-size-padding: 5px 15px;
 $button-size-border-width: 1px;
 $button-size-border-radius: 3px;
+$button-font-default: body;
+$button-font-primary: body-strong;
 $icon-button-size-border-width: 1px;
 $icon-button-size-border-radius: 3px;
 $icon-button-size-padding: 5px 7px;
@@ -391,6 +309,7 @@ $checkbox-size-width: 16px;
 $checkbox-size-padding: 24px;
 $checkbox-size-border-width: 1px;
 $checkbox-size-toggle-box-shadow: inset 0 0 1px 0 rgba(0, 0, 0, 0.2);
+$checkbox-font-default: body;
 $datepicker-toggle-size-width: 30px;
 $datepicker-toggle-size-height: 30px;
 $datepicker-body-size-label-padding-side: 33% / 7;
@@ -398,14 +317,20 @@ $datepicker-body-size-cell-min-size: 32px;
 $datepicker-body-size-cell-margin: 5%;
 $datepicker-body-size-cell-padding: 8px;
 $datepicker-body-size-cell-border-width: 1px;
+$datepicker-body-font-label: body-strong;
+$datepicker-body-font-today: body-strong;
 $datepicker-calendar-size-padding: 8px;
 $datepicker-calendar-size-divider-width: 1px;
 $datepicker-calendar-size-icon-border-width: 2px;
 $datepicker-calendar-size-icon-prev-icon-transform: translateX(2px) rotate(-45deg);
 $datepicker-calendar-size-icon-nex-icon-transform: translateX(-2px) rotate(45deg);
+$datepicker-calendar-font-default: body;
+$datepicker-calendar-font-header: caption;
 $divider-size-width: 1px;
 $divider-size-inset-margin: 80px;
 $dropdown-item-size-padding: 5px 15px;
+$dropdown-item-font-default: body;
+$dropdown-item-font-caption: caption;
 $dropdown-trigger-size-padding-left: 16px;
 $dropdown-panel-size-padding: 4px 0;
 $dropdown-panel-size-border-width: 1px;
@@ -423,10 +348,14 @@ $form-field-dark-color-scheme-states-invalid-background: transparent;
 $form-field-size-border-width: 1px;
 $form-field-size-border-radius: 3px;
 $form-field-size-button-width: 32px;
+$form-field-font-default: body;
 $form-field-hint-size-margin-top: 4px;
+$form-field-hint-font-default: caption;
 $input-size-padding: 5px 16px;
 $input-size-width: 100%;
 $input-size-min-height: 30px;
+$input-font-default: body;
+$input-font-monospace: body-mono;
 $link-light-color-scheme-text: #338FCC;
 $link-light-color-scheme-state-hover-text: #206EA2;
 $link-light-color-scheme-state-focused-outline: #338FCC;
@@ -441,6 +370,7 @@ $link-dark-color-scheme-dashed-border-bottom: rgba(#338FCC, 0.5);
 $link-dark-color-scheme-dashed-state-hover-border-bottom: rgba(#7FBAE1, 0.5);
 $link-dark-color-scheme-underlined-border-bottom: rgba(#338FCC, 0.32);
 $link-dark-color-scheme-underlined-state-hover-border-bottom: rgba(#7FBAE1, 0.32);
+$link-font-default: body;
 $list-size-horizontal-padding: 15px;
 $list-size-icon-padding: 4px;
 $list-size-item-height: 28px;
@@ -448,6 +378,7 @@ $list-size-two-line-height: 72px;
 $list-size-three-line-height: 88px;
 $list-size-multi-line-padding: 16px;
 $list-size-icon-width: 24px;
+$list-font-item: body;
 $modal-light-color-scheme-shadow: (0 0 0 1px #B3B3B3, 0 6px 12px 0 rgba(0, 0, 0, 0.5));
 $modal-light-color-scheme-background-mask: rgba(0, 0, 0, 0.5);
 $modal-dark-color-scheme-shadow: (0 0 0 1px #333333, 0 6px 12px 0 rgba(0, 0, 0, 0.5));
@@ -459,8 +390,10 @@ $modal-size-border-radius: 4px;
 $modal-size-border-width: 1px;
 $modal-header-size-border-radius: 4px 4px 0 0;
 $modal-header-size-padding: 14px 16px;
+$modal-header-font-default: title;
 $modal-body-size-max-height: calc(100vh - 260px);
 $modal-body-size-padding: 16px 24px 24px;
+$modal-body-font-default: body;
 $modal-footer-size-border-radius: 0 0 4px 4px;
 $modal-footer-size-padding: 16px;
 $modal-confirm-size-padding: 24px;
@@ -472,6 +405,7 @@ $navbar-dark-color-scheme-text: #D8EAF7;
 $navbar-dark-color-scheme-opacity: 0.5;
 $navbar-size-height: 48px;
 $navbar-size-icon-margin-left: 8px;
+$navbar-font-title: body;
 $navbar-item-light-color-scheme-text: #D8EAF7;
 $navbar-item-light-color-scheme-states-active: lighten(#206EA2, 5%);
 $navbar-item-light-color-scheme-states-hover: lighten(#206EA2, 5%);
@@ -485,10 +419,13 @@ $navbar-item-dark-color-scheme-states-disabled-opacity: 0.3;
 $navbar-item-size-padding: 16px;
 $navbar-brand-size-padding: 12px;
 $navbar-brand-size-margin-right: 24px;
+$navbar-brand-font-title: title;
 $optgroup-size-padding-left: 17px;
+$optgroup-font-default: subheading;
 $option-size-padding: 0 16px;
 $option-size-height: 32px;
 $option-size-border-width: 2px;
+$option-font-default: body;
 $popover-light-color-scheme-border: #B3B3B3;
 $popover-dark-color-scheme-border: #4D4D4D;
 $popover-size-padding: 16px;
@@ -498,9 +435,12 @@ $popover-size-arrow-width: 4px;
 $popover-size-small-width: 200px;
 $popover-size-normal-width: 400px;
 $popover-size-large-width: 640px;
+$popover-font-default: body;
 $popover-header-size-padding: 10px 16px;
+$popover-header-font-default: subheading;
 $popover-footer-size-padding: 12px 16px;
 $popover-footer-size-margin-top: 8px;
+$popover-footer-font-default: body;
 $popup-light-color-scheme-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.2);
 $popup-light-color-scheme-border: #B3B3B3;
 $popup-light-color-scheme-divider: #CCCCCC;
@@ -531,22 +471,30 @@ $radio-dark-color-scheme-states-focused-outer-circle-shadow: 0 0 0 2px #57A4D7;
 $radio-dark-color-scheme-states-focused-inner-circle-shadow: 0 0 0 1px #333333;
 $radio-size-size: 14px;
 $radio-size-padding: 24px; // Padding between radio inputs and their labels
+$radio-font-default: body;
 $select-size-height: 30px;
 $select-size-padding: 0 7px 0 15px;
 $select-size-padding-left-multiple: 7px;
+$select-font-default: body;
 $select-panel-size-max-height: 232px;
 $select-panel-size-max-width: 640px;
 $select-panel-size-vertical-padding: 4px;
 $select-panel-size-border-width: 1px;
 $select-panel-size-border-radius: 3px;
+$select-panel-font-default: body;
 $sidepanel-light-color-scheme-border: #B3B3B3;
 $sidepanel-dark-color-scheme-border: #333333;
+$sidepanel-font-default: body;
 $sidepanel-header-size-padding: 14px 16px;
 $sidepanel-header-size-close-padding: 0 0 0 8px;
+$sidepanel-header-font-default: title;
 $sidepanel-footer-size-padding: 16px;
+$sidepanel-footer-font-default: body;
 $table-size-border-width: 1px;
 $table-size-row-padding-vertical: 8px;
 $table-size-row-padding-horizontal: 16px;
+$table-font-header: caption;
+$table-font-body: body;
 $tabs-light-color-scheme-border: #B3B3B3;
 $tabs-light-color-scheme-state-active: #338FCC;
 $tabs-dark-color-scheme-border: #B3B3B3;
@@ -556,6 +504,7 @@ $tabs-size-highlight-height: 4px;
 $tabs-size-padding-horizontal: 16px;
 $tabs-size-border-width: 1px;
 $tabs-size-border-radius: 3px;
+$tabs-font-default: body;
 $tags-light-color-scheme-primary-background: #D8EAF7;
 $tags-light-color-scheme-primary-border: #D8EAF7;
 $tags-light-color-scheme-primary-icon: mix(#57A4D7, rgba(black, 0.05));
@@ -604,12 +553,18 @@ $tags-size-border-width: 1px;
 $tags-size-border-radius: 4px;
 $tags-size-icon-padding: 3px;
 $tags-size-text-margin: 7px;
+$tags-font-default: caption;
+$tags-font-mono: caption-mono;
+$tags-font-caps: caption-caps;
 $tag-list-size-padding: 1px 6px;
 $tag-list-size-min-height: 28px;
 $tag-input-size-height: 22px;
 $tag-input-size-margin: 2px 4px;
+$tag-input-font-default: body;
 $textarea-size-min-height: 50px;
 $textarea-size-padding: 5px 16px;
+$textarea-font-default: body;
+$textarea-font-mono: body-mono;
 $toggle-light-color-scheme-border: #B3B3B3;
 $toggle-light-color-scheme-background: linear-gradient(to bottom, #E6E6E6, #F0F0F0);
 $toggle-light-color-scheme-circle-border: #B3B3B3;
@@ -624,9 +579,11 @@ $toggle-size-height: 16px;
 $toggle-size-width: 28px;
 $toggle-size-border-radius: 9px;
 $toggle-size-label-margin: 8px;
+$toggle-font-default: body;
 $toggle-small-size-height: 14px;
 $toggle-small-size-width: 24px;
 $toggle-small-size-border-radius: 8px;
+$toggle-small-font-default: caption;
 $tooltip-light-color-scheme-background: #4D4D4D;
 $tooltip-light-color-scheme-text: white;
 $tooltip-light-color-scheme-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
@@ -640,9 +597,10 @@ $tooltip-size-arrow-size: 12px;
 $tooltip-size-arrow-width: 5px;
 $tooltip-size-padding: 8px 16px;
 $tooltip-size-distance: 5px + 4px;
-$tree-color-background: #4D4D4D;
+$tooltip-font-default: caption;
 $tree-size-border-width: 2px;
 $tree-size-node-height: 28px;
+$tree-font-node: body;
 $vertical-navbar-light-color-scheme-background: #114E77;
 $vertical-navbar-light-color-scheme-text: white;
 $vertical-navbar-light-color-scheme-toggle-button: white;
@@ -655,9 +613,11 @@ $vertical-navbar-dark-color-scheme-toggle-button: white;
 $vertical-navbar-dark-color-scheme-states-active-background: lighten(#114E77, 5%);
 $vertical-navbar-dark-color-scheme-states-hover-background: lighten(#114E77, 5%);
 $vertical-navbar-dark-color-scheme-states-progress-background: lighten(#07314D, 15%);
+$vertical-navbar-font-header: title;
 $vertical-navbar-item-size-height: 64px;
 $vertical-navbar-item-size-margin: 1px 0;
 $vertical-navbar-item-size-padding-horizontal: 16px;
 $vertical-navbar-item-size-icon-margin-right: 16px;
+$vertical-navbar-item-font-default: body;
 $vertical-navbar-item-font-icon-size: 32px;
 $navbar-badge-size-width: 64px;
