--- a/packages/mosaic/button/_button-theme.scss
+++ b/packages/mosaic/button/_button-theme.scss
@@ -105,10 +105,10 @@
 @mixin mc-button-typography($config) {
     .mc-button,
     .mc-icon-button {
-        @include mc-typography-level-to-styles($config, body);
+        @include mc-typography-level-to-styles($config, $button-font-default);
 
         &.mc-primary {
-            @include mc-typography-level-to-styles($config, body-strong);
+            @include mc-typography-level-to-styles($config, $button-font-primary);
         }
     }
 
