--- a/packages/mosaic/checkbox/_checkbox-theme.scss
+++ b/packages/mosaic/checkbox/_checkbox-theme.scss
@@ -62,6 +62,6 @@
 
 @mixin mc-checkbox-typography($config) {
     .mc-checkbox {
-        @include mc-typography-level-to-styles($config, body);
+        @include mc-typography-level-to-styles($config, $checkbox-font-default);
     }
 }
