--- a/packages/mosaic/core/option/_optgroup-theme.scss
+++ b/packages/mosaic/core/option/_optgroup-theme.scss
@@ -16,6 +16,6 @@
 
 @mixin mc-optgroup-typography($config) {
     .mc-optgroup-label {
-        @include mc-typography-level-to-styles($config, subheading);
+        @include mc-typography-level-to-styles($config, $optgroup-font-default);
     }
 }
