--- a/packages/mosaic/core/option/_option-theme.scss
+++ b/packages/mosaic/core/option/_option-theme.scss
@@ -35,6 +35,6 @@
 
 @mixin mc-option-typography($config) {
     .mc-option {
-        @include mc-typography-level-to-styles($config, body);
+        @include mc-typography-level-to-styles($config, $option-font-default);
     }
 }
