--- a/packages/mosaic/core/styles/_alerts.scss
+++ b/packages/mosaic/core/styles/_alerts.scss
@@ -113,22 +113,22 @@
 
 @mixin mc-alert-typography($config) {
     .mc-alert:not(.mc-alert_small) {
-        @include mc-typography-level-to-styles($config, body);
+        @include mc-typography-level-to-styles($config, $alert-font-default-body);
 
         header {
-            @include mc-typography-level-to-styles($config, subheading);
+            @include mc-typography-level-to-styles($config, $alert-font-default-header);
         }
     }
 
     .mc-alert.mc-alert_small {
-        @include mc-typography-level-to-styles($config, caption);
+        @include mc-typography-level-to-styles($config, $alert-font-small-body);
 
         header {
-            @include mc-typography-level-to-styles($config, caption);
+            @include mc-typography-level-to-styles($config, $alert-font-small-header);
         }
 
         .mc-link__text {
-            @include mc-typography-level-to-styles($config, caption);
+            @include mc-typography-level-to-styles($config, $alert-font-small-body);
         }
     }
 
