--- a/packages/mosaic/core/styles/_badges.scss
+++ b/packages/mosaic/core/styles/_badges.scss
@@ -34,7 +34,6 @@
 
 @mixin mc-badge-theme($theme) {
     $foreground: map-get($theme, foreground);
-    $background: map-get($theme, background);
 
     $primary: map-get($theme, primary);
     $second: map-get($theme, second);
@@ -84,10 +83,10 @@
 
 @mixin mc-badge-typography($config) {
     .mc-badge {
-        @include mc-typography-level-to-styles($config, caption);
+        @include mc-typography-level-to-styles($config, $badge-font-default);
     }
 
     .mc-badge_caps {
-        @include mc-typography-level-to-styles($config, caption-caps);
+        @include mc-typography-level-to-styles($config, $badge-font-caps);
     }
 }
