--- a/packages/mosaic/dropdown/_dropdown-theme.scss
+++ b/packages/mosaic/dropdown/_dropdown-theme.scss
@@ -55,10 +55,10 @@
 @mixin mc-dropdown-typography($config) {
     .mc-dropdown__item,
     .mc-dropdown__content {
-        @include mc-typography-level-to-styles($config, body);
+        @include mc-typography-level-to-styles($config, $dropdown-item-font-default);
     }
 
     .mc-dropdown__item-caption {
-        @include mc-typography-level-to-styles($config, caption);
+        @include mc-typography-level-to-styles($config, $dropdown-item-font-caption);
     }
 }
