--- a/packages/mosaic/form-field/_form-field-theme.scss
+++ b/packages/mosaic/form-field/_form-field-theme.scss
@@ -72,10 +72,10 @@
 
 @mixin mc-form-field-typography($config) {
     .mc-form-field {
-        @include mc-typography-level-to-styles($config, body);
+        @include mc-typography-level-to-styles($config, $form-field-font-default);
     }
 
     .mc-form-field__hint {
-        @include mc-typography-level-to-styles($config, caption);
+        @include mc-typography-level-to-styles($config, $form-field-hint-font-default);
     }
 }
