--- a/packages/mosaic/input/_input-theme.scss
+++ b/packages/mosaic/input/_input-theme.scss
@@ -24,10 +24,10 @@
 
 @mixin mc-input-typography($config) {
     .mc-input {
-        @include mc-typography-level-to-styles($config, body);
+        @include mc-typography-level-to-styles($config, $input-font-default);
     }
 
     .mc-input.mc-input_monospace {
-        @include mc-typography-level-to-styles($config, body-mono);
+        @include mc-typography-level-to-styles($config, $input-font-monospace);
     }
 }
