--- a/packages/mosaic/link/_link-theme.scss
+++ b/packages/mosaic/link/_link-theme.scss
@@ -96,6 +96,6 @@
 
 @mixin mc-link-typography($config) {
     .mc-link {
-        @include mc-typography-level-to-styles($config, body);
+        @include mc-typography-level-to-styles($config, $link-font-default);
     }
 }
