--- a/packages/mosaic/list/_list-theme.scss
+++ b/packages/mosaic/list/_list-theme.scss
@@ -35,8 +35,7 @@
 }
 
 @mixin mc-list-typography($config) {
-    .mc-list-item,
-    .mc-list-option {
-        @include mc-typography-level-to-styles($config, body);
+    .mc-list-item {
+        @include mc-typography-level-to-styles($config, $list-font-item);
     }
 }
