--- a/packages/mosaic/modal/_modal-theme.scss
+++ b/packages/mosaic/modal/_modal-theme.scss
@@ -63,13 +63,11 @@
 }
 
 @mixin mc-modal-typography($config) {
-    .mc-modal {
-        .mc-modal-title {
-            @include mc-typography-level-to-styles($config, title);
-        }
+    .mc-modal-title {
+        @include mc-typography-level-to-styles($config, $modal-header-font-default);
     }
 
     .mc-modal-body {
-        @include mc-typography-level-to-styles($config, body);
+        @include mc-typography-level-to-styles($config, $modal-body-font-default);
     }
 }
