--- a/packages/mosaic/navbar/_navbar-theme.scss
+++ b/packages/mosaic/navbar/_navbar-theme.scss
@@ -58,12 +58,12 @@
 
 @mixin mc-navbar-typography($config) {
     .mc-navbar-title {
-        @include mc-typography-level-to-styles($config, body);
+        @include mc-typography-level-to-styles($config, $navbar-font-title);
     }
 
     .mc-navbar-brand {
         .mc-navbar-title {
-            @include mc-typography-level-to-styles($config, title);
+            @include mc-typography-level-to-styles($config, $navbar-brand-font-title);
         }
     }
 }
