--- a/packages/mosaic/popover/_popover-theme.scss
+++ b/packages/mosaic/popover/_popover-theme.scss
@@ -97,13 +97,16 @@
 }
 
 @mixin mc-popover-typography($config) {
-    .mc-popover__content,
-    .mc-popover__footer {
-        @include mc-typography-level-to-styles($config, body);
+    .mc-popover__header {
+        @include mc-typography-level-to-styles($config, $popover-header-font-default);
     }
 
-    .mc-popover__header {
-        @include mc-typography-level-to-styles($config, subheading);
+    .mc-popover__content {
+        @include mc-typography-level-to-styles($config, $popover-font-default);
+    }
+
+    .mc-popover__footer {
+        @include mc-typography-level-to-styles($config, $popover-footer-font-default);
     }
 }
 
