--- a/packages/mosaic/radio/_radio-theme.scss
+++ b/packages/mosaic/radio/_radio-theme.scss
@@ -73,6 +73,6 @@
 
 @mixin mc-radio-typography($config) {
     .mc-radio-group {
-        @include mc-typography-level-to-styles($config, body);
+        @include mc-typography-level-to-styles($config, $radio-font-default);
     }
 }
