--- a/packages/mosaic/select/_select-theme.scss
+++ b/packages/mosaic/select/_select-theme.scss
@@ -40,8 +40,11 @@
 }
 
 @mixin mc-select-typography($config) {
-    .mc-select,
+    .mc-select {
+        @include mc-typography-level-to-styles($config, $select-font-default);
+    }
+
     .mc-select__panel {
-        @include mc-typography-level-to-styles($config, body);
+        @include mc-typography-level-to-styles($config, $select-panel-font-default);
     }
 }
