--- a/packages/mosaic/sidepanel/_sidepanel-theme.scss
+++ b/packages/mosaic/sidepanel/_sidepanel-theme.scss
@@ -51,11 +51,15 @@
 }
 
 @mixin mc-sidepanel-typography($config) {
-    .mc-sidepanel-container {
-        @include mc-typography-level-to-styles($config, body);
+    .mc-sidepanel-title {
+        @include mc-typography-level-to-styles($config, $sidepanel-header-font-default);
     }
 
-    .mc-sidepanel-title {
-        @include mc-typography-level-to-styles($config, title);
+    .mc-sidepanel-container {
+        @include mc-typography-level-to-styles($config, $sidepanel-font-default);
+    }
+
+    .mc-sidepanel-footer {
+        @include mc-typography-level-to-styles($config, $sidepanel-footer-font-default);
     }
 }
