--- a/packages/mosaic/table/_table-theme.scss
+++ b/packages/mosaic/table/_table-theme.scss
@@ -45,7 +45,7 @@
                 font-weight: normal;
             }
 
-            @include mc-typography-level-to-styles($config, caption);
+            @include mc-typography-level-to-styles($config, $table-font-header);
         }
 
         & > tbody {
@@ -53,7 +53,7 @@
                 font-weight: normal;
             }
 
-            @include mc-typography-level-to-styles($config, body);
+            @include mc-typography-level-to-styles($config, $table-font-body);
         }
     }
 }
