--- a/packages/mosaic/tabs/_tabs-theme.scss
+++ b/packages/mosaic/tabs/_tabs-theme.scss
@@ -90,6 +90,6 @@
     .mc-tab-label,
     .mc-tab-light-label,
     .mc-tab-link {
-        @include mc-typography-level-to-styles($config, body);
+        @include mc-typography-level-to-styles($config, $tabs-font-default);
     }
 }
