--- a/packages/mosaic/tags/_tag-theme.scss
+++ b/packages/mosaic/tags/_tag-theme.scss
@@ -116,19 +116,19 @@
 
 @mixin mc-tag-typography($config) {
     .mc-tag:not(.mc-tag_mono):not(.mc-tag_caps) {
-        @include mc-typography-level-to-styles($config, caption);
+        @include mc-typography-level-to-styles($config, $tags-font-default);
     }
 
     .mc-tag_mono {
-        @include mc-typography-level-to-styles($config, caption-mono);
+        @include mc-typography-level-to-styles($config, $tags-font-mono);
     }
 
     .mc-tag_caps {
-        @include mc-typography-level-to-styles($config, caption-caps);
+        @include mc-typography-level-to-styles($config, $tags-font-caps);
     }
 
     .mc-tag-input {
-        @include mc-typography-level-to-styles($config, body);
+        @include mc-typography-level-to-styles($config, $tag-input-font-default);
     }
 }
 
