--- a/packages/mosaic/textarea/_textarea-theme.scss
+++ b/packages/mosaic/textarea/_textarea-theme.scss
@@ -24,10 +24,10 @@
 
 @mixin mc-textarea-typography($config) {
     textarea.mc-textarea {
-        @include mc-typography-level-to-styles($config, body);
+        @include mc-typography-level-to-styles($config, $textarea-font-default);
     }
 
     .mc-textarea.mc-textarea_monospace {
-        @include mc-typography-level-to-styles($config, body-mono);
+        @include mc-typography-level-to-styles($config, $textarea-font-mono);
     }
 }
