--- a/packages/mosaic/toggle/_toggle-theme.scss
+++ b/packages/mosaic/toggle/_toggle-theme.scss
@@ -67,10 +67,10 @@
 
 @mixin mc-toggle-typography($config) {
     .mc-toggle:not(.mc-toggle_small) {
-        @include mc-typography-level-to-styles($config, body);
+        @include mc-typography-level-to-styles($config, $toggle-font-default);
     }
 
     .mc-toggle.mc-toggle_small {
-        @include mc-typography-level-to-styles($config, caption);
+        @include mc-typography-level-to-styles($config, $toggle-small-font-default);
     }
 }
