--- a/packages/mosaic/tooltip/_tooltip-theme.scss
+++ b/packages/mosaic/tooltip/_tooltip-theme.scss
@@ -65,6 +65,6 @@
 
 @mixin mc-tooltip-typography($config) {
     .mc-tooltip {
-        @include mc-typography-level-to-styles($config, caption);
+        @include mc-typography-level-to-styles($config, $tooltip-font-default);
     }
 }
