--- a/packages/mosaic/tree-select/_tree-select-theme.scss
+++ b/packages/mosaic/tree-select/_tree-select-theme.scss
@@ -32,6 +32,6 @@
 @mixin mc-tree-select-typography($config) {
     .mc-tree-select,
     .mc-tree-select__panel {
-        @include mc-typography-level-to-styles($config, body);
+        @include mc-typography-level-to-styles($config, $select-panel-font-default);
     }
 }
