--- a/packages/mosaic/tree/_tree-theme.scss
+++ b/packages/mosaic/tree/_tree-theme.scss
@@ -35,6 +35,6 @@
 @mixin mc-tree-typography($config) {
     .mc-tree-node,
     .mc-tree-option {
-        @include mc-typography-level-to-styles($config, body);
+        @include mc-typography-level-to-styles($config, $tree-font-node);
     }
 }
