--- a/packages/mosaic/vertical-navbar/_vertical-navbar-theme.scss
+++ b/packages/mosaic/vertical-navbar/_vertical-navbar-theme.scss
@@ -57,11 +57,11 @@
 }
 
 @mixin mc-vertical-navbar-typography($config) {
-    .mc-vertical-navbar__item {
-        @include mc-typography-level-to-styles($config, body);
+    .mc-vertical-navbar__header {
+        @include mc-typography-level-to-styles($config, $vertical-navbar-font-header);
     }
 
-    .mc-vertical-navbar__header {
-        @include mc-typography-level-to-styles($config, title);
+    .mc-vertical-navbar__item {
+        @include mc-typography-level-to-styles($config, $vertical-navbar-item-font-default);
     }
 }
